# rprty

./: .gitlab-ci.yml  index.html  package-lock.json  package.json  pyproject.toml
dms_report/: report.py
public/: report.json
src/: App.svelte  app.css  content.ts
src/lib/: Chart.svelte  Section.svelte
