[tool.poetry]
name = "dms-report"
version = "0.0.0"
description = ""
authors = ["Gilad Kutiel <giladk@mobileye.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
rope = "^1.11.0"
autopep8 = "^2.0.4"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
